--- a/templates/building/fac.html
+++ b/templates/building/fac.html
@@ -198,6 +198,7 @@
 	
 </main>
 <footer>
+	<button type= "button" class = "btn btn-default btn-xs" onclick = "zoomOut()" style="float: right;"> Zoom Out</button>
 	<span class="info">How it works</span>
 	<hr>
 	<ul>
@@ -233,11 +234,12 @@
 </footer>
 
 <script>
-	var map = document.getElementById("map");
-	var currentScreenX = map.offsetWidth - 100.0;
-	var currentScreenY = map.offsetHeight - 100.0;
+	var dot_flag = false;
 						
 	function dotPositions(){
+		var map = document.getElementById("map");
+		var currentScreenX = map.offsetWidth - 100.0;
+		var currentScreenY = map.offsetHeight - 100.0;
 		var i;
 		var l = {{length}};
 		for(i = 0; i < l; i++){
@@ -267,10 +269,14 @@
 			s.style.transform = 'translate('+x+'px,'+y+'px)';
 			//s.style.left = x + "px";
 			//s.style.top = y + "px";
+			console.log("dotPositions() ran!");
+			dot_flag = true;
 		}
 	}
 						
 	window.onload = dotPositions;
+	if (!dot_flag)
+		dotPositions();
 </script>
 <script>
 function distance(x1,y1,x2,y2) {
@@ -405,6 +411,9 @@ initPoint();
       var img = null;
       var current = {x: 0, y: 0, zoom: 1, oldzoom: 1};
       var container = null;
+      {% for i in range(length)%}
+        var dot{{i}} = null;
+      {%endfor%}
       var table = null;
       var map = null;
       var prevScale = 1;
@@ -610,6 +619,10 @@ initPoint();
     //    document.getElementById('map-container').scrollTop= tempy - newScrollTop;
          furn.style.transform
         = 'scale('+current.zoom+')';
+        {% for i in range(length)%}
+        dot{{i}}.style.transform
+        = 'scale('+current.zoom+')';
+        {%endfor%}
       
       }
   
@@ -617,7 +630,9 @@ initPoint();
         img = document.getElementById("map");
         container = document.getElementById("map-container");
         furn = document.getElementById("furniture");
-        
+        {% for i in range(length)%}
+        dot{{i}} = document.getElementById("dot{{i}}");
+        {%endfor%}
       //  table = new Furniture("furniture", "map-container");
        // map = new Furniture("map", "map-container");
  
@@ -680,6 +695,10 @@ initPoint();
         document.getElementById('map-container').scrollTop= -((current.y * current.zoom) );
          furn.style.transform
         = 'scale('+current.zoom+')';
+        {% for i in range(length)%}
+        dot{{i}}.style.transform
+        = 'scale('+current.zoom+')';
+        {%endfor%}
        //prevScale = newScale;
         });
       };
