--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,6 +1,11 @@
-<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/demostyles.css') }}" async>
-<link href="https://fonts.googleapis.com/css?family=Lora|Nunito" rel="stylesheet" async>
-
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <title>Upload</title>
+  <!-- Styles -->
+  <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/demostyles.css') }}" async>
+  <link href="https://fonts.googleapis.com/css?family=Lora|Nunito" rel="stylesheet" async>
+</head>
 
 
 <body>
@@ -18,7 +23,9 @@
     </div>
 </div>
 
-<h1>Upload Map</h1>
+<header>
+  <span class="highlight-white line-bg">Upload a map</span>
+</header>
 
 <form action = "{{url_for('uploading')}}" method = "POST" enctype = "multipart/form-data">
                 
