--- a/templates/building/fac.html
+++ b/templates/building/fac.html
@@ -155,9 +155,9 @@
 	<div id="map-container">
 		<!-- 147.64587/114.39804 = 1.290633 -->
 		<div id="newcontainer">
-			<img id="map" src="{{ url_for('static', filename='img/FAC.svg') }}" width="150%">
+			<img id="map" src="{{ url_for('static', filename='img/FAC.svg') }}" width="150%"/>
 			<svg id="furniture" width="150%" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" viewbox="0 0 640 495.88" preserveAspectRatio="xMinYMin meet">
-				<use href="#ct" width="20" height="20" x="205.4" y="348" transform="translate(-10,-10)" position="absolute"/>
+				<use href="#ct" width="20" height="20" x="205.4" y="348" transform="translate(-10,-10)"/>
 				<use href="#ct" width="20" height="20" x="234.1" y="324" transform="translate(-10,-10)"/>
 
 				<use href="#ct" width="20" height="20" x="291.7" y="372" transform="translate(-10,-10)"/>
