--- a/templates/building/fac.html
+++ b/templates/building/fac.html
@@ -210,7 +210,7 @@
 	<!--
 	<button type= "button" class = "btn btn-default btn-xs" onclick = "zoomOut()" style="float: right;"> Zoom Out</button>
 	-->
-	<span >How it works</span>
+	<span class="info">How it works</span>
 	<hr>
 	<ul>
 		{%if flag == False or flag == None%}
