Add zoom to disney

--- a/templates/building/disney.html
+++ b/templates/building/disney.html
@@ -322,6 +322,8 @@ class Point {
 		let bounds = this.map.getBoundingClientRect();
 		this.offsetLeft = bounds.left;
 		this.offsetTop = bounds.top;
+		this.x *= SoniasGlobalZoomVariable;
+		this.y *= SoniasGlobalZoomVariable;
 		this.updateScheduled = false;
 		// console.log([this.offsetLeft, this.offsetTop]);
 	}
@@ -387,6 +389,9 @@ class Point {
 	}
 }
 
+var SoniasGlobalZoomVariable = 1;
+
+
 const	meID = 'pin',
 		mapID = 'newcontainer';
 var		point,
@@ -451,6 +456,7 @@ initPoint();
       };
     
       var zoomWithTransform = function(e){
+      	
         var zoomImg = img,
         originalZoom = current.zoom,
         newZoom = current.zoom * 1.25, //put parameter for scale
@@ -471,7 +477,8 @@ initPoint();
         /// make sure we take mouse pointer offset into account!
         finalX = (xCoord + (mouseX - xCoord) - newX),
         finalY = (yCoord + (mouseY - yCoord) - newY)
-        current.zoom = newZoom;
+        SoniasGlobalZoomVariable = current.zoom = newZoom;
+        point.updateOffset();
         current.x = finalX;
         current.y = finalY;
         current.oldzoom = originalZoom;
@@ -518,47 +525,8 @@ initPoint();
        // map = new Furniture("map", "map-container");
  
       //  disableImgEventHandlers();
-        var hammer = new Hammer(container, {
-          domEvents: true
-        });
-        hammer.get('pinch').set({
-          enable: true
-        });
-        hammer.on('pan', function(e) {
-          //map.translate(e.deltaX, e.deltaY);
-          //table.translate(e.deltaX, e.deltaY);
-        });
-        hammer.on('panend', function(e) {
-         // map.updateLastPos();
-         // table.updateLastPos();
-        });
-        hammer.on('pinch', function(e) {
-          // We only calculate the pinch center on the first pinch event as we want the center to
-          // stay consistent during the entire pinch
-          //if (pinchCenter === null) {
-           // pinchCenter = rawCenter(e);
-           // var offsetX = pinchCenter.x * scale - (-x * scale + Math.min(viewportWidth, curWidth) / 2);
-           // var offsetY = pinchCenter.y * scale - (-y * scale + Math.min(viewportHeight, curHeight) / 2);
-           // pinchCenterOffset = {
-           //   x: offsetX,
-           //   y: offsetY
-           // };
-          //}
-        //  var newScale = restrictScale(scale * e.scale);
-        //  var zoomX = pinchCenter.x * newScale - pinchCenterOffset.x;
-         // var zoomY = pinchCenter.y * newScale - pinchCenterOffset.y;
-         // var zoomCenter = {
-         //   x: zoomX / newScale,
-          //  y: zoomY / newScale
-         // };
+        var hammer = new Hammer(container);
         
-          
-        });
-        hammer.on('pinchend', function(e) {
-       //   updateLastScale();
-       //   updateLastPos();
-       //   pinchCenter = null;
-        });
         hammer.on('doubletap', function(e) {
           //var c = map.rawCenter(e);
           //var n = map.zoomAround(1.6, c.x, c.y);
@@ -581,7 +549,11 @@ initPoint();
           //apply new transformations
           //img.style.transform= 'scale('+current.zoom+')';
         console.log(current.x + ' ' + current.y);
-
+        
+        
+		
+		
+		
          //furn.style.transform = 'scale('+current.zoom+')';
 		
 		/*
@@ -603,6 +575,5 @@ initPoint();
       };
       onLoad();
 </script>
-
 </body>
 </html>
