--- a/templates/building/fac.html
+++ b/templates/building/fac.html
@@ -1294,8 +1294,8 @@
 			//var yScale = currentScreenX/1000;
 		
 			//s.style.transform = 'scale('+scale+','+scale+')';
-			s.style.width = scale*100 + "px";
-			s.style.height = scale*100 + "px";
+			s.style.width = 30 + "px";
+			s.style.height = 30 + "px";
 			s.style.transform = 'translate('+x+'px,'+y+'px)';
 			//s.style.left = x + "px";
 			//s.style.top = y + "px";
