--- a/templates/buildingclick/templateclick.html
+++ b/templates/buildingclick/templateclick.html
@@ -182,8 +182,8 @@
 		
 		var scale = currentScreenX/2000;
 		
-		s.style.width = scale*30 + "px";
-		s.style.height = scale*30 + "px";
+		s.style.width = 30 + "px";
+		s.style.height = 30 + "px";
 
 		var x = ((currentScreenX*preX)/screenX) + 50.0;
 		var y = ((currentScreenY*preY)/screenY) + 50.0;
